--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -641,10 +641,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.cursor-no-drop {
-  cursor: no-drop;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -742,18 +738,18 @@ video {
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
-.bg-var-primary {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 9 20 / var(--tw-bg-opacity));
-}
-
-.bg-var-secondary {
+.bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-var-secondary\/85 {
+.bg-black\/85 {
   background-color: rgb(0 0 0 / 0.85);
+}
+
+.bg-red-submit {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 9 20 / var(--tw-bg-opacity));
 }
 
 .bg-zinc-800 {
@@ -761,11 +757,7 @@ video {
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
 }
 
-.bg-var-primary\/50 {
-  background-color: rgb(229 9 20 / 0.5);
-}
-
-.stroke-var-secondary\/85 {
+.stroke-black\/85 {
   stroke: rgb(0 0 0 / 0.85);
 }
 
@@ -843,10 +835,6 @@ video {
 .text-zinc-600 {
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
-}
-
-.text-white\/50 {
-  color: rgb(255 255 255 / 0.5);
 }
 
 .ring-transparent {
@@ -938,7 +926,7 @@ video {
   z-index: -10;
 }
 
-.after\:bg-var-secondary\/70::after {
+.after\:bg-black\/70::after {
   content: var(--tw-content);
   background-color: rgb(0 0 0 / 0.7);
 }
