--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -645,6 +645,10 @@ video {
   cursor: pointer;
 }
 
+.cursor-no-drop {
+  cursor: no-drop;
+}
+
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -738,18 +742,18 @@ video {
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
-.bg-black {
+.bg-var-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 9 20 / var(--tw-bg-opacity));
+}
+
+.bg-var-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-black\/85 {
+.bg-var-secondary\/85 {
   background-color: rgb(0 0 0 / 0.85);
-}
-
-.bg-red-submit {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 9 20 / var(--tw-bg-opacity));
 }
 
 .bg-zinc-800 {
@@ -757,7 +761,11 @@ video {
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
 }
 
-.stroke-black\/85 {
+.bg-var-primary\/50 {
+  background-color: rgb(229 9 20 / 0.5);
+}
+
+.stroke-var-secondary\/85 {
   stroke: rgb(0 0 0 / 0.85);
 }
 
@@ -835,6 +843,10 @@ video {
 .text-zinc-600 {
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
+}
+
+.text-white\/50 {
+  color: rgb(255 255 255 / 0.5);
 }
 
 .ring-transparent {
@@ -926,7 +938,7 @@ video {
   z-index: -10;
 }
 
-.after\:bg-black\/70::after {
+.after\:bg-var-secondary\/70::after {
   content: var(--tw-content);
   background-color: rgb(0 0 0 / 0.7);
 }
