feat(global): inclusão do webpack

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Para navegadores baseados no Chromium */
 input[type="password"]::-ms-reveal,
 input[type="password"]::-ms-clear {
